--- a/account-to-bank.html
+++ b/account-to-bank.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>划出-金仓贷</title>
+        <title>转出到银行-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -35,7 +35,7 @@
                         <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="loan.html">我要借款</a>
+                        <a href="loan.html">我要融资</a>
                     </li>
                     <li class="sub">
                         <a href="invest.html">我要投资</a>
@@ -69,20 +69,31 @@
             <div id="left" class="bor">
                 <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
                 <ul id="subMenu" class="left_ul">
-                    <li><a href="account.html" class="c900">我的账户</a><i class="png"></i>
+                    <li>
+                        <a href="account.html">我的账户</a><i class="png"></i>
                         <ol class="pb20 pt5">
-                            <li><a href="account-bank-to.html">划入</a></li>
-                            <li><a href="account-to-bank.html">划出</a></li>
-                            <li><a href="account-info.html">账户资料</a></li>
+                            <li><a href="account-bank-to.html">从银行划入</a></li>
+                            <li><a href="account-to-bank.html" class="c900">转出到银行</a></li>
+                            <li><a href="account-info-in.html">充值记录查询</a></li>
+                            <li><a href="account-info-out.html">提现记录查询</a></li>
                             <li><a href="account-invitation.html">我的邀请</a></li>
                         </ol>
                     </li>
-                    <li><a href="account-rzxmgl.html">借款项目管理</a>
-                        <ol class="pb20 pt5 hide">
-                            <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
+                    <li>
+                        <a href="account-invest.html">投资查询</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-income-info.html">收益查询</a></li>
+                            <li><a href="account-trade-info.html">交易查询</a></li>
                         </ol>
                     </li>
-                    <li><a href="account-jycx.html">交易查询</a></li>
+                    <li>
+                        <a href="account-fund.html">融资项目管理</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-fund-apply.html">融资项目申请</a></li>
+                            <li><a href="account-fund-out.html">融资款提取</a></li>
+                            <li><a href="account-fund-in.html">融资项目还款</a></li>
+                        </ol>
+                    </li>
                     <li><a href="account-safe.html">安全中心</a></li>
                     <li><a href="account-message.html">消息中心</a></li>
                 </ul>
@@ -91,7 +102,7 @@
             <div id="right" class="bor">
                 <form name="form1" action="#" method="post">
                     <div class="p40 pt20">
-                        <h2 class="title"><span>划出-转出到银行</span></h2>
+                        <h2 class="title"><span>转出到银行</span></h2>
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab mt20">
                             <tbody>
                                 <tr>
