--- a/account-info.html
+++ b/account-info.html
@@ -35,7 +35,7 @@
                         <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="loan.html">我要借款</a>
+                        <a href="loan.html">我要融资</a>
                     </li>
                     <li class="sub">
                         <a href="invest.html">我要投资</a>
@@ -69,20 +69,31 @@
             <div id="left" class="bor">
                 <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
                 <ul id="subMenu" class="left_ul">
-                    <li><a href="account.html" class="c900">我的账户</a><i class="png"></i>
+                    <li>
+                        <a href="account.html">我的账户</a><i class="png"></i>
                         <ol class="pb20 pt5">
-                            <li><a href="account-bank-to.html">划入</a></li>
-                            <li><a href="account-to-bank.html">划出</a></li>
-                            <li><a href="account-info.html">账户资料</a></li>
+                            <li><a href="account-bank-to.html">从银行划入</a></li>
+                            <li><a href="account-to-bank.html">转出到银行</a></li>
+                            <li><a href="account-info-in.html">充值记录查询</a></li>
+                            <li><a href="account-info-out.html">提现记录查询</a></li>
                             <li><a href="account-invitation.html">我的邀请</a></li>
                         </ol>
                     </li>
-                    <li><a href="account-rzxmgl.html">借款项目管理</a>
-                        <ol class="pb20 pt5 hide">
-                            <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
+                    <li>
+                        <a href="account-invest.html">投资查询</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-income-info.html">收益查询</a></li>
+                            <li><a href="account-trade-info.html">交易查询</a></li>
                         </ol>
                     </li>
-                    <li><a href="account-jycx.html">交易查询</a></li>
+                    <li>
+                        <a href="account-fund.html">融资项目管理</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-fund-apply.html">融资项目申请</a></li>
+                            <li><a href="account-fund-out.html">融资款提取</a></li>
+                            <li><a href="account-fund-in.html">融资项目还款</a></li>
+                        </ol>
+                    </li>
                     <li><a href="account-safe.html">安全中心</a></li>
                     <li><a href="account-message.html">消息中心</a></li>
                 </ul>
@@ -100,50 +111,50 @@
                         </h2>
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab mt20">
                             <tbody><tr>
-                              <td width="30%" class="bgf0">用户编号</td>
-                              <td width="70%">
-                                142
-                              </td>
-                            </tr>
-                            <tr>
-                              <td width="30%" class="bgf0">用户账号</td>
-                              <td width="70%">qqqqq</td>
-                            </tr>
-                            <tr>
-                              <td width="30%" class="bgf0">用户姓名</td>
-                              <td width="70%">aaaa</td>
-                            </tr>
-                            <tr>
-                              <td width="30%" class="bgf0">证件类型</td>
-                              <td width="70%">身份证</td>
-                            </tr>
-                            <tr>
-                              <td width="30%" class="bgf0">证件号码</td>
-                              <td width="70%">521569856236548888</td>
-                            </tr>
-                            <tr>
-                              <td width="30%" class="bgf0">性别</td>
-                              <td width="70%">男</td>
-                            </tr>
-                            <tr>
-                              <td width="30%" class="bgf0">联系邮箱</td>
-                              <td width="70%">142123456@163.com</td>
-                            </tr>
-                            <tr>
-                              <td width="30%" class="bgf0">联系电话</td>
-                              <td width="70%">324234</td>
-                            </tr>
-                                <tr>
-                                  <td width="30%" class="bgf0">身份证正面</td>
-                                  <td width="70%">   
-                                        <img src="/201408/20140826174001-20140826f405e165cf79484c830bd54895d0edbb.jpg" width="187" height="187" border="0">
-                                  </td>
+                                <td width="30%" class="bgf0">用户编号</td>
+                                <td width="70%">
+                                    142
+                                </td>
                                 </tr>
                                 <tr>
-                                  <td width="30%" class="bgf0">身份证背面</td>
-                                  <td width="70%">
+                                    <td width="30%" class="bgf0">用户账号</td>
+                                    <td width="70%">qqqqq</td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">用户姓名</td>
+                                    <td width="70%">aaaa</td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">证件类型</td>
+                                    <td width="70%">身份证</td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">证件号码</td>
+                                    <td width="70%">521569856236548888</td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">性别</td>
+                                    <td width="70%">男</td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">联系邮箱</td>
+                                    <td width="70%">142123456@163.com</td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">联系电话</td>
+                                    <td width="70%">324234</td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">身份证正面</td>
+                                    <td width="70%">   
+                                        <img src="/201408/20140826174001-20140826f405e165cf79484c830bd54895d0edbb.jpg" width="187" height="187" border="0">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td width="30%" class="bgf0">身份证背面</td>
+                                    <td width="70%">
                                         <img src="/201408/20140826174001-20140826913cdd0e445a454087cbededf3b8366b.jpg" width="187" height="187" border="0">
-                                  </td>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
