--- a/account-message.html
+++ b/account-message.html
@@ -1,137 +1,148 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="keywords" content="川商贷">
-<meta http-equiv="description" content="川商贷">
-<title>消息中心-金仓贷</title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="keywords" content="川商贷">
+        <meta http-equiv="description" content="川商贷">
+        <title>消息中心-金仓贷</title>
 
-<link href="css/public.css" type="text/css" rel="stylesheet" />
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="css/public.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-<!--[if IE 6]>
+        <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
+        <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-<div class="top">
-<div class="w1100 mc">
-  <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><span>您好，月亮 <a href="#">[安全退出]</a></span><a href="#" class="borl pl20">您有（1）条未读消息</a><a href="#" class="borl pl20">我的账户</a><a href="#" class="borl pl20">充值</a></div>
-</div>
-</div>
+        <div class="top">
+            <div class="w1100 mc">
+                <div class="fl">欢迎使用金仓贷！</div>
+                <div class="fr topr"><span>您好，月亮 <a href="#">[安全退出]</a></span><a href="#" class="borl pl20">您有（1）条未读消息</a><a href="#" class="borl pl20">我的账户</a><a href="#" class="borl pl20">充值</a></div>
+            </div>
+        </div>
 
-<div class="header">
-<div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <ul class="nav">
-    <li>
-      <a href="index.html">首页</a>
-    </li>
-    <li>
-      <a href="loan.html">我要借款</a>
-    </li>
-    <li class="sub">
-      <a href="invest.html">我要投资</a>
-      <ul>
-        <li><a href="invest.html">散标投资</a></li>
-        <li><a href="transfer.html">债权转让</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="account.html" class="c900">账户管理</a>
-    </li>
-    <li>
-      <a href="security.html">安全保障</a>
-    </li>
-    <li class="sub">
-      <a href="company-intro.html">关于我们</a>
-      <ul>
-        <li><a href="company-intro.html">公司介绍</a></li>
-        <li><a href="product-intro.html">产品介绍</a></li>
-        <li><a href="qualification.html">企业资质</a></li>
-        <li><a href="contact-us.html">联系我们</a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-</div>
-
-
-<div class="con clearfix">
-
-  <div id="left" class="bor">
-    <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
-    <ul id="subMenu" class="left_ul">
-      <li><a href="account.html">我的账户</a>
-        <ol class="pb20 pt5 hide">
-          <li><a href="#">网银划入</a></li>
-          <li><a href="#">快捷划入</a></li>
-          <li><a href="#">划出</a></li>
-          <li><a href="#">账户资料</a></li>
-        </ol>
-      </li>
-      <li><a href="account-rzxmgl.html">借款项目管理</a>
-        <ol class="pb20 pt5 hide">
-          <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
-        </ol>
-      </li>
-      <li><a href="account-jycx.html">交易查询</a></li>
-      <li><a href="account-safe.html">安全中心</a></li>
-      <li><a href="account-message.html" class="c900">消息中心</a><i class="png"></i></li>
-    </ul>
-  </div> 
-  
-  <div id="right" class="bor">
-  <div class="p40 pt20">
-  
-    <h2 class="title"><span>消息中心</span></h2>
-    <div class="mt20"><input name="" type="checkbox" value=""  class="checkbox" /> 全选 <a class="png more ml10 mr20"><span class="png">标记为已读</span></a>（共 <span class="ce80">1</span> 条，其中 <span class="ce80">1</span> 条未读消息）</div>
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab2 mt10">
-        <tr>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
-          <th>类型</th>
-          <th width="60%">标题</th>
-          <th>时间</th>
-        </tr>
-        <tr>
-          <td class="pl15"><input name="" type="checkbox" value=""  class="checkbox" /></td>
-          <td><i class="png i_xiaoxi"></i></td>
-          <td>系统消息</td>
-          <td><a href="account-message-xq.html">川商贷中秋祝福</a></td>
-          <td>2014-07-17</td>
-        </tr>
-      </table>
-      
-      <div class="tabpages mt10 tar c999"><span class="fr" style="margin-top:3px;"><input name="" type="text"  class="text fl c999"/><a class="go fl pr5">GO</a></span><span class="mr20">共 0 条记录 0 页</span>|<a class="ml20 c999">首页</a><a class="ml20 c999">上一页</a><a class="ml20 c999">下一页</a><a class="ml20 mr20 c999">尾页</a></div>
-    
-  </div>
-  </div>
-  
-
-</div>
+        <div class="header">
+            <div class="w1100 mc">
+                <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+                <ul class="nav">
+                    <li>
+                        <a href="index.html">首页</a>
+                    </li>
+                    <li>
+                        <a href="loan.html">我要融资</a>
+                    </li>
+                    <li class="sub">
+                        <a href="invest.html">我要投资</a>
+                        <ul>
+                            <li><a href="invest.html">散标投资</a></li>
+                            <li><a href="transfer.html">债权转让</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="account.html" class="c900">账户管理</a>
+                    </li>
+                    <li>
+                        <a href="security.html">安全保障</a>
+                    </li>
+                    <li class="sub">
+                        <a href="company-intro.html">关于我们</a>
+                        <ul>
+                            <li><a href="company-intro.html">公司介绍</a></li>
+                            <li><a href="product-intro.html">产品介绍</a></li>
+                            <li><a href="qualification.html">企业资质</a></li>
+                            <li><a href="contact-us.html">联系我们</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
 
+        <div class="con clearfix">
 
-<div class="footer">
-  <div style="width:1000px; margin:0 auto">
-    <div style="width:80%" class="tal fl">
-      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商借款担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-    </div>
-    <div style="width:20%" class="tar fl">
-      <img src="images/test-qrcode.jpg" style="width:100px;">
-    </div>
-    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
-    <div class="clearfix"></div>
-  </div>
-</div>
+            <div id="left" class="bor">
+                <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
+                <ul id="subMenu" class="left_ul">
+                    <li>
+                        <a href="account.html">我的账户</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-bank-to.html">从银行划入</a></li>
+                            <li><a href="account-to-bank.html">转出到银行</a></li>
+                            <li><a href="account-info-in.html">充值记录查询</a></li>
+                            <li><a href="account-info-out.html">提现记录查询</a></li>
+                            <li><a href="account-invitation.html">我的邀请</a></li>
+                        </ol>
+                    </li>
+                    <li>
+                        <a href="account-invest.html">投资查询</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-income-info.html">收益查询</a></li>
+                            <li><a href="account-trade-info.html">交易查询</a></li>
+                        </ol>
+                    </li>
+                    <li>
+                        <a href="account-fund.html">融资项目管理</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-fund-apply.html">融资项目申请</a></li>
+                            <li><a href="account-fund-out.html">融资款提取</a></li>
+                            <li><a href="account-fund-in.html">融资项目还款</a></li>
+                        </ol>
+                    </li>
+                    <li><a href="account-safe.html">安全中心</a></li>
+                    <li><a href="account-message.html" class="c900">消息中心</a></li>
+                </ul>
+            </div> 
 
-</body>
+            <div id="right" class="bor">
+                <div class="p40 pt20">
+
+                    <h2 class="title"><span>消息中心</span></h2>
+                    <div class="mt20"><input name="" type="checkbox" value=""  class="checkbox" /> 全选 <a class="png more ml10 mr20"><span class="png">标记为已读</span></a>（共 <span class="ce80">1</span> 条，其中 <span class="ce80">1</span> 条未读消息）</div>
+                    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab2 mt10">
+                        <tr>
+                            <th>&nbsp;</th>
+                            <th>&nbsp;</th>
+                            <th>类型</th>
+                            <th width="60%">标题</th>
+                            <th>时间</th>
+                        </tr>
+                        <tr>
+                            <td class="pl15"><input name="" type="checkbox" value=""  class="checkbox" /></td>
+                            <td><i class="png i_xiaoxi"></i></td>
+                            <td>系统消息</td>
+                            <td><a href="account-message-xq.html">川商贷中秋祝福</a></td>
+                            <td>2014-07-17</td>
+                        </tr>
+                    </table>
+
+                    <div class="tabpages mt10 tar c999"><span class="fr" style="margin-top:3px;"><input name="" type="text"  class="text fl c999"/><a class="go fl pr5">GO</a></span><span class="mr20">共 0 条记录 0 页</span>|<a class="ml20 c999">首页</a><a class="ml20 c999">上一页</a><a class="ml20 c999">下一页</a><a class="ml20 mr20 c999">尾页</a></div>
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+        <div class="footer">
+            <div style="width:1000px; margin:0 auto">
+                <div style="width:80%" class="tal fl">
+                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商借款担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                </div>
+                <div style="width:20%" class="tar fl">
+                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                </div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+    </body>
 </html>
