--- a/account-pw-trade.html
+++ b/account-pw-trade.html
@@ -35,7 +35,7 @@
                         <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="loan.html">我要借款</a>
+                        <a href="loan.html">我要融资</a>
                     </li>
                     <li class="sub">
                         <a href="invest.html">我要投资</a>
@@ -69,20 +69,32 @@
             <div id="left" class="bor">
                 <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
                 <ul id="subMenu" class="left_ul">
-                    <li><a href="account.html" class="c900">我的账户</a><i class="png"></i>
+                    <li>
+                        <a href="account.html">我的账户</a><i class="png"></i>
                         <ol class="pb20 pt5">
-                            <li><a href="account-bank-to.html">划入</a></li>
-                            <li><a href="account-to-bank.html">划出</a></li>
-                            <li><a href="account-info.html">账户资料</a></li>
+                            <li><a href="account-bank-to.html">从银行划入</a></li>
+                            <li><a href="account-to-bank.html">转出到银行</a></li>
+                            <li><a href="account-info-in.html">充值记录查询</a></li>
+                            <li><a href="account-info-out.html">提现记录查询</a></li>
+                            <li><a href="account-invitation.html">我的邀请</a></li>
                         </ol>
                     </li>
-                    <li><a href="account-rzxmgl.html">借款项目管理</a>
-                        <ol class="pb20 pt5 hide">
-                            <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
+                    <li>
+                        <a href="account-invest.html">投资查询</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-income-info.html">收益查询</a></li>
+                            <li><a href="account-trade-info.html">交易查询</a></li>
                         </ol>
                     </li>
-                    <li><a href="account-jycx.html">交易查询</a></li>
-                    <li><a href="account-safe.html">安全中心</a></li>
+                    <li>
+                        <a href="account-fund.html">融资项目管理</a><i class="png"></i>
+                        <ol class="pb20 pt5">
+                            <li><a href="account-fund-apply.html">融资项目申请</a></li>
+                            <li><a href="account-fund-out.html">融资款提取</a></li>
+                            <li><a href="account-fund-in.html">融资项目还款</a></li>
+                        </ol>
+                    </li>
+                    <li><a href="account-safe.html" class="c900">安全中心</a></li>
                     <li><a href="account-message.html">消息中心</a></li>
                 </ul>
             </div> 
@@ -90,35 +102,35 @@
             <div id="right" class="bor">
                 <div class="p40 pt20">
                     <h4 class="title">
-                    <span>支付密码</span>
+                        <span>支付密码</span>
                     </h4>
                     <form name="form1" action="#" method="post">
                         <input type="hidden" id="loginPasswordSet" name="loginPasswordSet" value="20">
                         <div class="clearfix anqfw p10">
                             <table>
-                                    <tbody>
-                                
-                                <tr>
-                                    <td>
-                                        <label>密码：</label>
-                                    </td>
-                                    <td>
-                                        <input type="password" id="newPassword" name="newPassword" isrequired="true" displayname="新密码" value="" class="text" maxlength="20">
-                                        <font color="#FF0000">输入新的平台支付密码</font>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label>确认新密码：</label>
-                                    </td>
-                                    <td>
-                                        <input type="password" id="confirmPassword" name="confirmPassword" isrequired="true" displayname="确认新密码" value="" class="text" maxlength="20">
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2"><input type="submit" value="提交" class="png btn fl mt50" /></td>
-                                </tr>
-                            </tbody></table>
+                                <tbody>
+
+                                    <tr>
+                                        <td>
+                                            <label>密码：</label>
+                                        </td>
+                                        <td>
+                                            <input type="password" id="newPassword" name="newPassword" isrequired="true" displayname="新密码" value="" class="text" maxlength="20">
+                                            <font color="#FF0000">输入新的平台支付密码</font>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <label>确认新密码：</label>
+                                        </td>
+                                        <td>
+                                            <input type="password" id="confirmPassword" name="confirmPassword" isrequired="true" displayname="确认新密码" value="" class="text" maxlength="20">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2"><input type="submit" value="提交" class="png btn fl mt50" /></td>
+                                    </tr>
+                                </tbody></table>
                             <div class="errors">    
                                 <span id="EEE"></span>
                             </div>
