--- a/login.html
+++ b/login.html
@@ -1,113 +1,113 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="keywords" content="川商贷">
-<meta http-equiv="description" content="川商贷">
-<title>会员登录-金仓贷</title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="keywords" content="川商贷">
+        <meta http-equiv="description" content="川商贷">
+        <title>会员登录-金仓贷</title>
 
-<link href="css/public.css" type="text/css" rel="stylesheet" />
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="css/public.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-<!--[if IE 6]>
+        <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
+        <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-<div class="top">
-<div class="w1100 mc">
-  <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
-</div>
-</div>
+        <div class="top">
+            <div class="w1100 mc">
+                <div class="fl">欢迎使用金仓贷！</div>
+                <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
+            </div>
+        </div>
 
-<div class="header">
-<div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <ul class="nav">
-    <li>
-      <a href="index.html">首页</a>
-    </li>
-    <li>
-      <a href="loan.html">我要借款</a>
-    </li>
-    <li class="sub">
-      <a href="invest.html">我要投资</a>
-      <ul>
-        <li><a href="invest.html">散标投资</a></li>
-        <li><a href="transfer.html">债权转让</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="account.html">账户管理</a>
-    </li>
-    <li>
-      <a href="security.html">安全保障</a>
-    </li>
-    <li class="sub">
-      <a href="company-intro.html" class="c900">关于我们</a>
-      <ul>
-        <li><a href="company-intro.html">公司介绍</a></li>
-        <li><a href="product-intro.html">产品介绍</a></li>
-        <li><a href="qualification.html">企业资质</a></li>
-        <li><a href="contact-us.html">联系我们</a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-</div>
-
-
-<div class="con bor">
-<div class="login">
-
-  <h2 class="lh60">会员登录</h2>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab3">
-  <tr>
-    <td width="10%" class="tar">用户名：</td>
-    <td width="90%"><input name="" type="text" class="text2 w250" /></td>
-  </tr>
-  <tr>
-    <td class="tar">密码：</td>
-    <td><input name="" type="text" class="text2 w250" /><a href="#" class="c08c ml10">忘记密码？</a></td>
-  </tr>
-  <tr>
-    <td class="tar">验证码：</td>
-    <td><input name="" type="text" class="text2" style="width:136px;" /><img src="upload/yzm.jpg" class="ml10 yzm" /><a href="#" class="c08c ml10">看不清？换一张</a></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td><a class="png btn3 mt30"><span class="png btn3">立即投资</span></a></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>没有帐号？ <a href="login.html" class="c08c ml10">免费注册</a></td>
-  </tr>
-</table>
-
-</div>  
-</div>
+        <div class="header">
+            <div class="w1100 mc">
+                <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+                <ul class="nav">
+                    <li>
+                        <a href="index.html">首页</a>
+                    </li>
+                    <li>
+                        <a href="loan.html">我要借款</a>
+                    </li>
+                    <li class="sub">
+                        <a href="invest.html">我要投资</a>
+                        <ul>
+                            <li><a href="invest.html">散标投资</a></li>
+                            <li><a href="transfer.html">债权转让</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="account.html">账户管理</a>
+                    </li>
+                    <li>
+                        <a href="security.html">安全保障</a>
+                    </li>
+                    <li class="sub">
+                        <a href="company-intro.html" class="c900">关于我们</a>
+                        <ul>
+                            <li><a href="company-intro.html">公司介绍</a></li>
+                            <li><a href="product-intro.html">产品介绍</a></li>
+                            <li><a href="qualification.html">企业资质</a></li>
+                            <li><a href="contact-us.html">联系我们</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
 
+        <div class="con bor">
+            <div class="login">
 
-<div class="footer">
-  <div style="width:1000px; margin:0 auto">
-    <div style="width:80%" class="tal fl">
-      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-    </div>
-    <div style="width:20%" class="tar fl">
-      <img src="images/test-qrcode.jpg" style="width:100px;">
-    </div>
-    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
-    <div class="clearfix"></div>
-  </div>
-</div>
+                <h2 class="lh60">会员登录</h2>
+                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab3">
+                    <tr>
+                        <td width="10%" class="tar">用户名：</td>
+                        <td width="90%"><input name="" type="text" class="text2 w250" /></td>
+                    </tr>
+                    <tr>
+                        <td class="tar">密码：</td>
+                        <td><input name="" type="text" class="text2 w250" /><a href="#" class="c08c ml10">忘记密码？</a></td>
+                    </tr>
+                    <tr>
+                        <td class="tar">验证码：</td>
+                        <td><input name="" type="text" class="text2" style="width:136px;" /><img src="upload/yzm.jpg" class="ml10 yzm" /><a href="#" class="c08c ml10">看不清？换一张</a></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td><a class="png btn3 mt30"><span class="png btn3">立即投资</span></a></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td>没有帐号？ <a href="login.html" class="c08c ml10">免费注册</a></td>
+                    </tr>
+                </table>
 
-</body>
+            </div>  
+        </div>
+
+
+
+        <div class="footer">
+            <div style="width:1000px; margin:0 auto">
+                <div style="width:80%" class="tal fl">
+                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                </div>
+                <div style="width:20%" class="tar fl">
+                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                </div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+    </body>
 </html>
