--- a/register-select.html
+++ b/register-select.html
@@ -1,70 +1,70 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="keywords" content="川商贷">
-<meta http-equiv="description" content="川商贷">
-<title>注册方式选择-金仓贷</title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="keywords" content="川商贷">
+        <meta http-equiv="description" content="川商贷">
+        <title>注册方式选择-金仓贷</title>
 
-<link href="css/public.css" type="text/css" rel="stylesheet" />
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="css/public.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-<!--[if IE 6]>
+        <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
+        <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-<div class="top">
+        <div class="top">
 
-</div>
+        </div>
 
-<div class="header">
-<div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <h1 class="fl c999 lh36" style=" margin-left:120px; padding-left:20px; margin-top:15px; border-left:1px solid #d8d8d8">注册</h1>
-</div>
-</div>
-
-
-<div class="con clearfix">
-
-  <div class="log_sel bor">
-    <div class="log_sel_tit">个人用户注册</div>
-    <div class="log_sel_con p20">
-      <div>企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br /></div>
-      <div class="tac mt20"><a class="png btn3"><span class="png btn3">立即注册</span></a></div>
-    </div>
-  </div>
-  <div class="log_sel bor ml20">
-    <div class="log_sel_tit" style="background-color:#66cbfd">企业用户注册</div>
-    <div class="log_sel_con p20">
-      <div>企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br /></div>
-      <div class="tac mt20"><a class="png btn3"><span class="png btn3">立即注册</span></a></div>
-    </div>
-  </div>    
-  
-</div>
+        <div class="header">
+            <div class="w1100 mc">
+                <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+                <h1 class="fl c999 lh36" style=" margin-left:120px; padding-left:20px; margin-top:15px; border-left:1px solid #d8d8d8">注册</h1>
+            </div>
+        </div>
 
 
+        <div class="con clearfix">
 
-<div class="footer">
-  <div style="width:1000px; margin:0 auto">
-    <div style="width:80%" class="tal fl">
-      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-    </div>
-    <div style="width:20%" class="tar fl">
-      <img src="images/test-qrcode.jpg" style="width:100px;">
-    </div>
-    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
-    <div class="clearfix"></div>
-  </div>
-</div>
+            <div class="log_sel bor">
+                <div class="log_sel_tit">个人用户注册</div>
+                <div class="log_sel_con p20">
+                    <div>企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br /></div>
+                    <div class="tac mt20"><a class="png btn3"><span class="png btn3">立即注册</span></a></div>
+                </div>
+            </div>
+            <div class="log_sel bor ml20">
+                <div class="log_sel_tit" style="background-color:#66cbfd">企业用户注册</div>
+                <div class="log_sel_con p20">
+                    <div>企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br />企业注册内容企业注册内容<br /></div>
+                    <div class="tac mt20"><a class="png btn3"><span class="png btn3">立即注册</span></a></div>
+                </div>
+            </div>    
 
-</body>
+        </div>
+
+
+
+        <div class="footer">
+            <div style="width:1000px; margin:0 auto">
+                <div style="width:80%" class="tal fl">
+                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                </div>
+                <div style="width:20%" class="tar fl">
+                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                </div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+    </body>
 </html>
