--- a/register.html
+++ b/register.html
@@ -1,97 +1,97 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="keywords" content="川商贷">
-<meta http-equiv="description" content="川商贷">
-<title>注册-金仓贷</title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="keywords" content="川商贷">
+        <meta http-equiv="description" content="川商贷">
+        <title>注册-金仓贷</title>
 
-<link href="css/public.css" type="text/css" rel="stylesheet" />
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="css/public.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-<!--[if IE 6]>
+        <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
+        <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
 
-</head>
+    </head>
 
-<body class="index-body">
+    <body class="index-body">
 
-<div class="top">
+        <div class="top">
 
-</div>
+        </div>
 
-<div class="header">
-<div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <h1 class="fl c999 lh36" style=" margin-left:120px; padding-left:20px; margin-top:15px; border-left:1px solid #d8d8d8">注册</h1>
-</div>
-</div>
-
-
-<div class="con bor">
-<div class="login">
-
-  <div class="steps clearfix">
-    <div class="line"></div>
-    <div class="step"><i class="png">1</i><p>用户注册</p></div>
-    <div class="step step2" style=" margin-left:133px;"><i class="png">2</i><p>发送激活邮件</p></div>
-    <div class="step step2" style=" margin-left:133px;"><i class="png">3</i><p>用户激活</p></div>
-    <div class="step step2" style=" margin-left:133px;"><i class="png">4</i><p>登录并实名认证</p></div>
-  </div>
-  <div class="tar lh60 ft14">已有帐号？ <a href="../account/login.html" class="c08c ml10">直接登录</a></div>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab3">
-  <tr>
-    <td width="15%" class="tar"><span class="cred">*</span>用户名：</td>
-    <td width="75%"><input type="text" class="text2 w250 c999" value="用户名为6-20位字母或数字组合" onFocus="if(value==defaultValue){value='';this.style.color='#333'}" onBlur="if(!value){value=defaultValue;this.style.color='#999'}" /><i class="png i_right ml10"></i></td>
-  </tr>
-  <tr>
-    <td class="tar"><span class="cred">*</span>真实姓名：</td>
-    <td><input name="" type="text" class="text2 w250" /><i class="png i_tixing ml10"></i><span class="ml5 c999 ft12">若名字包含生僻字，请<a href="#" class="c08c">点此打开生僻字库</a>进行选择。</span></td>
-  </tr>
-  <tr>
-    <td  class="tar"><span class="cred">*</span>常用电子邮箱：</td>
-    <td><input type="text" class="text2 w250 c999" value="注册完成后需要通过邮箱激活用户" onFocus="if(value==defaultValue){value='';this.style.color='#333'}" onBlur="if(!value){value=defaultValue;this.style.color='#999'}" /><i class="png i_wrong ml10"></i></td>
-  </tr>
-  <tr>
-    <td class="tar">推荐人编号：</td>
-    <td><input name="" type="text" class="text2 w250" /></td>
-  </tr>
-  <tr>
-    <td class="tar"><span class="cred">*</span>验证码：</td>
-    <td><input name="" type="text" class="text2" style="width:136px;" /><img src="upload/yzm.jpg" class="ml10 yzm" /><a href="#" class="c08c ml10 ft12">看不清？换一张</a></td>
-  </tr>
-   <tr>
-    <td>&nbsp;</td>
-    <td><input name="" type="checkbox" class="checkbox" value="" checked="checked" />我同意<a href="#" class="c08c">《服务条款》</a>和<a href="#" class="c08c">《借入协议》</a>
-    </td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td><a class="png btn3"><span class="png btn3">立即投资</span></a></td>
-  </tr>
-</table>
-
-</div>  
-</div>
+        <div class="header">
+            <div class="w1100 mc">
+                <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+                <h1 class="fl c999 lh36" style=" margin-left:120px; padding-left:20px; margin-top:15px; border-left:1px solid #d8d8d8">注册</h1>
+            </div>
+        </div>
 
 
+        <div class="con bor">
+            <div class="login">
 
-<div class="footer">
-  <div style="width:1000px; margin:0 auto">
-    <div style="width:80%" class="tal fl">
-      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-    </div>
-    <div style="width:20%" class="tar fl">
-      <img src="images/test-qrcode.jpg" style="width:100px;">
-    </div>
-    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
-    <div class="clearfix"></div>
-  </div>
-</div>
+                <div class="steps clearfix">
+                    <div class="line"></div>
+                    <div class="step"><i class="png">1</i><p>用户注册</p></div>
+                    <div class="step step2" style=" margin-left:133px;"><i class="png">2</i><p>发送激活邮件</p></div>
+                    <div class="step step2" style=" margin-left:133px;"><i class="png">3</i><p>用户激活</p></div>
+                    <div class="step step2" style=" margin-left:133px;"><i class="png">4</i><p>登录并实名认证</p></div>
+                </div>
+                <div class="tar lh60 ft14">已有帐号？ <a href="../account/login.html" class="c08c ml10">直接登录</a></div>
+                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab3">
+                    <tr>
+                        <td width="15%" class="tar"><span class="cred">*</span>用户名：</td>
+                        <td width="75%"><input type="text" class="text2 w250 c999" value="用户名为6-20位字母或数字组合" onFocus="if(value==defaultValue){value='';this.style.color='#333'}" onBlur="if(!value){value=defaultValue;this.style.color='#999'}" /><i class="png i_right ml10"></i></td>
+                    </tr>
+                    <tr>
+                        <td class="tar"><span class="cred">*</span>真实姓名：</td>
+                        <td><input name="" type="text" class="text2 w250" /><i class="png i_tixing ml10"></i><span class="ml5 c999 ft12">若名字包含生僻字，请<a href="#" class="c08c">点此打开生僻字库</a>进行选择。</span></td>
+                    </tr>
+                    <tr>
+                        <td  class="tar"><span class="cred">*</span>常用电子邮箱：</td>
+                        <td><input type="text" class="text2 w250 c999" value="注册完成后需要通过邮箱激活用户" onFocus="if(value==defaultValue){value='';this.style.color='#333'}" onBlur="if(!value){value=defaultValue;this.style.color='#999'}" /><i class="png i_wrong ml10"></i></td>
+                    </tr>
+                    <tr>
+                        <td class="tar">推荐人编号：</td>
+                        <td><input name="" type="text" class="text2 w250" /></td>
+                    </tr>
+                    <tr>
+                        <td class="tar"><span class="cred">*</span>验证码：</td>
+                        <td><input name="" type="text" class="text2" style="width:136px;" /><img src="upload/yzm.jpg" class="ml10 yzm" /><a href="#" class="c08c ml10 ft12">看不清？换一张</a></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td><input name="" type="checkbox" class="checkbox" value="" checked="checked" />我同意<a href="#" class="c08c">《服务条款》</a>和<a href="#" class="c08c">《借入协议》</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td><a class="png btn3"><span class="png btn3">立即投资</span></a></td>
+                    </tr>
+                </table>
 
-</body>
+            </div>  
+        </div>
+
+
+
+        <div class="footer">
+            <div style="width:1000px; margin:0 auto">
+                <div style="width:80%" class="tal fl">
+                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                </div>
+                <div style="width:20%" class="tar fl">
+                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                </div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+    </body>
 </html>
